--- a/scripts/asm-installer/cloudbuild-master.yaml
+++ b/scripts/asm-installer/cloudbuild-master.yaml
@@ -49,6 +49,17 @@ steps:
   waitFor:
   - 'lint-with-shellcheck'
 
+- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
+  id: 'setup-long-term-cluster'
+  entrypoint: '/bin/bash'
+  args:
+  - '-c'
+  - >
+    ./tests/setup_longterm_cluster
+  waitFor:
+  - 'fetch-secrets'
+
   #############
   # FAST TESTS
   #############
@@ -61,7 +72,7 @@ steps:
   - >
     ./tests/run_cli_tests
   waitFor:
-  - 'fetch-secrets'
+  - 'setup-long-term-cluster'
   env:
   - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
   - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
@@ -79,7 +90,7 @@ steps:
   - >
     ./tests/run_print_config_test
   waitFor:
-  - 'fetch-secrets'
+  - 'setup-long-term-cluster'
   env:
   - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
   - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
