Revert "Merge all profiles, force empty profile"
This partially reverts commit 2b717c5a916988565b239890a519e1da790b0434.
Specifically, this puts the multi-* yaml files back so that manual
installation steps still work properly.

--- a/asm/istio/options/multicloud.yaml
+++ b/asm/istio/options/multicloud.yaml
@@ -15,12 +15,4 @@
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
-  values:
-    telemetry:
-      enabled: true
-      v2:
-        enabled: true
-        prometheus:
-          enabled: true
-        stackdriver:
-          enabled: false
+  profile: asm-multicloud
