Add CLOUDRUN_ADDR for managed control plane
For Gateway, a new env (ISTIO_META_CLOUDRUN_ADDR) is needed.
The value of this env is obtained from mutatingwebhook after
MCP installation.

--- a/asm/istio/options/managed-control-plane.yaml
+++ b/asm/istio/options/managed-control-plane.yaml
@@ -43,6 +43,7 @@ spec:
         OUTPUT_CERTS: "/etc/istio/proxy"
         XDS_TOKEN_TYPE: "Istio"
         XDS_HEADER_Cloud-Run-Enable-H2: "y"
+        ISTIO_META_CLOUDRUN_ADDR: "ISTIO_CLOUDRUN_ADDR" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.managed-controlplane.cloudrun-addr"}
   values:
     gateways:
       istio-ingressgateway:
