--- a/scripts/asm-installer/cloudbuild-master.yaml
+++ b/scripts/asm-installer/cloudbuild-master.yaml
@@ -44,25 +44,8 @@ steps:
   - '-c'
   - >
     ./tests/setup_longterm_cluster
+    long-term-test-cluster,long-term-test-cluster-environ
   env:
-  - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
-  - 'KEY_FILE=${_KEY_FILE}'
-  - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
-  - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
-  - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
-
-- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
-  id: 'setup-long-term-cluster-for-environ-test'
-  entrypoint: '/bin/bash'
-  args:
-  - '-c'
-  - >
-    ./tests/setup_longterm_cluster
-  waitFor:
-  - 'fetch-secrets'
-  env:
-  - '_LT_CLUSTER_NAME=long-term-test-cluster-environ'
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
   - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
@@ -174,8 +157,6 @@ steps:
     ./tests/run_basic_suite_vm
     --PROJECT_ID "${PROJECT_ID}"
     --BUILD_ID "${BUILD_ID}"
-  waitFor:
-  - 'setup-long-term-cluster-for-environ-test'
   env:
   - '_LT_CLUSTER_NAME=long-term-test-cluster-environ'
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
@@ -195,8 +176,6 @@ steps:
     ./tests/run_basic_instance_template_creation
     --PROJECT_ID "${PROJECT_ID}"
     --BUILD_ID "${BUILD_ID}"
-  waitFor:
-  - 'run-basic-suite-vm'
   env:
   - '_LT_CLUSTER_NAME=long-term-test-cluster-environ'
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
