--- a/scripts/asm-installer/cloudbuild-master.yaml
+++ b/scripts/asm-installer/cloudbuild-master.yaml
@@ -56,6 +56,18 @@ steps:
   #############
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
   dir: 'scripts/asm-installer'
+  id: 'run-release-debug'
+  entrypoint: '/bin/bash'
+  args:
+  - '-c'
+  - >
+    ./release_asm_installer
+  env:
+  - '_DEBUG=1'
+  timeout: 10s
+
+- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'run-cli-tests'
   entrypoint: '/bin/bash'
   args:
