--- a/scripts/asm-installer/cloudbuild-master.yaml
+++ b/scripts/asm-installer/cloudbuild-master.yaml
@@ -56,6 +56,18 @@ steps:
   #############
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
   dir: 'scripts/asm-installer'
+  id: 'run-release-debug'
+  entrypoint: '/bin/bash'
+  args:
+  - '-c'
+  - >
+    ./release_asm_installer
+  env:
+  - '_DEBUG=1'
+  timeout: 10s
+
+- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
   id: 'run-cli-tests'
   entrypoint: '/bin/bash'
   args:
@@ -126,7 +138,7 @@ steps:
   - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
   - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
   - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
-  timeout: 600s
+  timeout: 1200s
 
 substitutions:
   _BUCKET_NAME: my-gcs-bucket
