--- a/asm/istio/expansion/expose-istiod.yaml
+++ b/asm/istio/expansion/expose-istiod.yaml
@@ -8,15 +8,19 @@ spec:
     istio: eastwestgateway
   servers:
     - port:
-        name: tcp-istiod
+        name: tls-istiod
         number: 15012
-        protocol: TCP
+        protocol: tls
+      tls:
+        mode: PASSTHROUGH        
       hosts:
         - "*"
     - port:
-        name: tcp-istiodwebhook
+        name: tls-istiodwebhook
         number: 15017
-        protocol: TCP
+        protocol: tls
+      tls:
+        mode: PASSTHROUGH          
       hosts:
         - "*"
 ---
@@ -27,39 +31,25 @@ metadata:
   namespace: istio-system
 spec:
   hosts:
-  - istiod.istio-system.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHost"}
+  - "*"
   gateways:
   - istiod-gateway
-  tcp:
+  tls:
   - match:
     - port: 15012
+      sniHosts:
+      - istiod.istio-system.svc # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHost"}
     route:
     - destination:
-        host: istiod.istio-system.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHost"}
+        host: istiod.istio-system.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHostFQDN"}
         port:
           number: 15012
   - match:
     - port: 15017
+      sniHosts:
+      - istiod.istio-system.svc # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHost"}
     route:
     - destination:
-        host: istiod.istio-system.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHost"}
+        host: istiod.istio-system.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHostFQDN"}
         port:
           number: 443
----
-apiVersion: networking.istio.io/v1alpha3
-kind: DestinationRule
-metadata:
-  name: istiod-dr # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiod-dr-name"}
-  namespace: istio-system
-spec:
-  host: istiod.istio-system.svc.cluster.local # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.istiodHost"}
-  trafficPolicy:
-    portLevelSettings:
-    - port:
-        number: 15012
-      tls:
-        mode: DISABLE
-    - port:
-        number: 15017
-      tls:
-        mode: DISABLE
