--- a/asm/istio/istio-operator.yaml
+++ b/asm/istio/istio-operator.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+---
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 spec:
@@ -20,8 +21,8 @@ spec:
   tag: 1.8.2-asm.2 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.tag"}
   meshConfig:
     trustDomainAliases: # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.trustDomainAliases"}
-    - "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
-    trustDomain: "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
+      - PROJECT_ID.svc.id.goog # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
+    trustDomain: PROJECT_ID.svc.id.goog # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
     defaultConfig:
       proxyMetadata:
         GKE_CLUSTER_URL: "https://container.googleapis.com/v1/projects/PROJECT_ID/locations/us-central1-c/clusters/asm-cluster" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
@@ -39,19 +40,19 @@ spec:
     base:
       enabled: true
     egressGateways:
-    - enabled: false
-      name: istio-egressgateway
-      k8s:
-        hpaSpec:
-          maxReplicas: 5
-          minReplicas: 2
+      - enabled: false
+        name: istio-egressgateway
+        k8s:
+          hpaSpec:
+            maxReplicas: 5
+            minReplicas: 2
     ingressGateways:
-    - enabled: true
-      name: istio-ingressgateway
-      k8s:
-        hpaSpec:
-          maxReplicas: 5
-          minReplicas: 2
+      - enabled: true
+        name: istio-ingressgateway
+        k8s:
+          hpaSpec:
+            maxReplicas: 5
+            minReplicas: 2
     # The default profile is tuned to fit on smaller clusters.
     # Increase cpu req to ensure we can handle larger scale clusters.
     pilot:
@@ -64,20 +65,20 @@ spec:
           minReplicas: 2
         replicaCount: 2
         env:
-        - name: GKE_CLUSTER_URL
-          value: "https://container.googleapis.com/v1/projects/PROJECT_ID/locations/us-central1-c/clusters/asm-cluster" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
-        - name: GCP_METADATA
-          value: "PROJECT_ID|PROJECT_NUMBER|asm-cluster|us-central1-c" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-metadata"}
-        - name: SPIFFE_BUNDLE_ENDPOINTS
-          value: "PROJECT_ID.svc.id.goog|https://storage.googleapis.com/mesh-ca-resources/spiffe_bundle.json" # {"$ref":"#/definitions/io.k8s.cli.substitutions.spiffe-bundle-endpoints"}
-        - name: ENABLE_STACKDRIVER_MONITORING
-          value: "true" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
-        - name: TOKEN_AUDIENCES
-          value: "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
-        - name: PILOT_ENABLE_WORKLOAD_ENTRY_AUTOREGISTRATION
-          value: "true"
-        - name: PILOT_ENABLE_CROSS_CLUSTER_WORKLOAD_ENTRY
-          value: "true"
+          - name: GKE_CLUSTER_URL
+            value: "https://container.googleapis.com/v1/projects/PROJECT_ID/locations/us-central1-c/clusters/asm-cluster" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
+          - name: GCP_METADATA
+            value: "PROJECT_ID|PROJECT_NUMBER|asm-cluster|us-central1-c" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-metadata"}
+          - name: SPIFFE_BUNDLE_ENDPOINTS
+            value: "PROJECT_ID.svc.id.goog|https://storage.googleapis.com/mesh-ca-resources/spiffe_bundle.json" # {"$ref":"#/definitions/io.k8s.cli.substitutions.spiffe-bundle-endpoints"}
+          - name: ENABLE_STACKDRIVER_MONITORING
+            value: "true" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
+          - name: TOKEN_AUDIENCES
+            value: "PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
+          - name: PILOT_ENABLE_WORKLOAD_ENTRY_AUTOREGISTRATION
+            value: "true"
+          - name: PILOT_ENABLE_CROSS_CLUSTER_WORKLOAD_ENTRY
+            value: "true"
   values:
     # Protocol sniffing is not supported
     pilot:
