--- a/scripts/asm-installer/cloudbuild-flaky.yaml
+++ b/scripts/asm-installer/cloudbuild-flaky.yaml
@@ -2,6 +2,14 @@ steps:
   ########
   # SETUP
   ########
+  - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+    dir: 'scripts/asm-installer'
+    id: 'no-existing-flaky-test'
+    entrypoint: '/bin/bash'
+    args:
+      - '-c'
+      - |
+        echo "No existing flaky test. Configure this job to add flaky tests."
 
   #############
   # FAST TESTS
