--- a/asm/istio/options/managed-control-plane-webhooks.yaml
+++ b/asm/istio/options/managed-control-plane-webhooks.yaml
@@ -16,7 +16,7 @@
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: istiod-istio-system
+  name: istiod-istio-system-mcp
   labels:
     app: istiod
     release: istio
