--- a/scripts/asm-installer/cloudbuild-flaky.yaml
+++ b/scripts/asm-installer/cloudbuild-flaky.yaml
@@ -1,23 +1,36 @@
 steps:
-  ########
-  # SETUP
-  ########
-  - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  - name: 'gcr.io/cloud-builders/gcloud'
     dir: 'scripts/asm-installer'
-    id: 'no-existing-flaky-test'
+    id: 'fetch-secrets'
     entrypoint: '/bin/bash'
     args:
       - '-c'
       - |
-        echo "No existing flaky test. Configure this job to add flaky tests."
+        date
+        gcloud secrets versions access latest \
+        --secret="${_SECRET_NAME}" \
+        --format='get(payload.data)' \
+        --project="${PROJECT_ID}" \
+        | tr '_-' '/+' \
+        | base64 -d > "${_KEY_FILE}"
 
-  #############
-  # FAST TESTS
-  #############
-
-  #############
-  # SLOW TESTS
-  #############
+  - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+    dir: 'scripts/asm-installer'
+    id: 'run-install-custom-cert-suite'
+    entrypoint: '/bin/bash'
+    args:
+      - '-c'
+      - >
+        ./tests/run_install_custom_cert_suite
+        --PROJECT_ID "${PROJECT_ID}"
+        --BUILD_ID "${BUILD_ID}"
+    env:
+      - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
+      - 'KEY_FILE=${_KEY_FILE}'
+      - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
+      - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
+      - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
+    timeout: 1200s
 
 substitutions:
   _BUCKET_NAME: my-gcs-bucket
