--- a/asmcli/cloudbuild-flaky.yaml
+++ b/asmcli/cloudbuild-flaky.yaml
@@ -1,6 +1,6 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
-    dir: 'scripts/asm-installer'
+    dir: 'asmcli'
     id: 'fetch-secrets'
     entrypoint: '/bin/bash'
     args:
@@ -15,7 +15,7 @@ steps:
         | base64 -d > "${_KEY_FILE}"
 
   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-    dir: 'scripts/asm-installer'
+    dir: 'asmcli'
     id: 'run-install-custom-cert-suite'
     entrypoint: '/bin/bash'
     args:
@@ -36,7 +36,7 @@ substitutions:
   _BUCKET_NAME: my-gcs-bucket
   _CLUSTER_LOCATION: us-central1-c
   _IMAGE_NAME: gcloud-with-kpt
-  _SCRIPT_NAME: install_asm
+  _SCRIPT_NAME: asmcli
   _ASM_VM_SCRIPT_NAME: asm_vm
   _ASM_PKG_BRANCH: ""
   _SERVICE_ACCOUNT: asm-installer
