--- a/asmcli/cloudbuild-staging.yaml
+++ b/asmcli/cloudbuild-staging.yaml
@@ -3,18 +3,18 @@ steps:
   # SETUP
   ########
 - name: 'gcr.io/cloud-builders/docker'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'build-tester-image'
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}', '.']
   waitFor: ['-']
 - name: 'gcr.io/cloud-builders/docker'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'publish-tester-image'
   args: ['push', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}']
   waitFor: ['build-tester-image']
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'lint-with-shellcheck'
   entrypoint: 'shellcheck'
   args:
@@ -27,7 +27,7 @@ steps:
     # Disabled for now, see #296. We have more users with LTS Linux releases
     # than non-Bourne shells. Please open an issue if you're affected.
     #- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-    #  dir: 'scripts/asm-installer'
+    #  dir: 'asmcli'
     #  id: 'check-posh-compatibility'
     #  entrypoint: 'posh'
     #  args: ['-n', '${_SCRIPT_NAME}']
@@ -35,7 +35,7 @@ steps:
     #  - 'publish-tester-image'
 
 - name: 'gcr.io/cloud-builders/gcloud'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'fetch-secrets'
   entrypoint: '/bin/bash'
   args:
@@ -52,7 +52,7 @@ steps:
   - 'lint-with-shellcheck'
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'setup-long-term-cluster'
   entrypoint: '/bin/bash'
   args:
@@ -69,7 +69,7 @@ steps:
   - 'fetch-secrets'
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'clean-up-old-clusters'
   entrypoint: '/bin/bash'
   args:
@@ -139,7 +139,7 @@ steps:
   # FAST TESTS
   #############
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'run-cli-tests'
   entrypoint: '/bin/bash'
   args:
@@ -157,7 +157,7 @@ steps:
   timeout: 120s
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'run-print-config-test'
   entrypoint: '/bin/bash'
   args:
@@ -182,7 +182,7 @@ steps:
   #############
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'run-migration-suite-meshca'
   entrypoint: '/bin/bash'
   args:
@@ -204,7 +204,7 @@ steps:
   timeout: 2400s # 40 mins
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'run-migration-suite-meshca-previous-version'
   entrypoint: '/bin/bash'
   args:
@@ -226,7 +226,7 @@ steps:
   timeout: 2400s # 40 mins
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'run-migration-suite-citadel'
   entrypoint: '/bin/bash'
   args:
@@ -248,7 +248,7 @@ steps:
   timeout: 2400s # 40 mins
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  dir: 'scripts/asm-installer'
+  dir: 'asmcli'
   id: 'run-migration-suite-citadel-previous-version'
   entrypoint: '/bin/bash'
   args:
@@ -273,7 +273,7 @@ substitutions:
   _BUCKET_NAME: my-gcs-bucket
   _CLUSTER_LOCATION: us-central1-c
   _IMAGE_NAME: gcloud-with-kpt
-  _SCRIPT_NAME: install_asm
+  _SCRIPT_NAME: asmcli
   _ASM_PKG_BRANCH: ""
   _SERVICE_ACCOUNT: asm-installer
   _SECRET_NAME: asm-installer-creds
