--- a/asmcli/Dockerfile
+++ b/asmcli/Dockerfile
@@ -1,7 +1,7 @@
 # this is using debian, with a "minimal footprint" install for gcloud
 FROM gcr.io/google.com/cloudsdktool/cloud-sdk:slim
 # cloudbuild will mount a volume in this path
-WORKDIR /workspace/
+WORKDIR /workspace/asmcli
 # cloudbuild will override this variable:
 ENV SERVICE_ACCOUNT my_sa_email_goes_here
 # cloudbuild will override this variable:
