--- a/asmcli/cloudbuild-main.yaml
+++ b/asmcli/cloudbuild-main.yaml
@@ -3,6 +3,11 @@ steps:
   ########
   # SETUP
   ########
+  - name: 'gcr.io/cloud-marketplace-containers/google/bazel'
+    entrypoint: 'bazel'
+    args: ['build', 'merge']
+  - name: 'bash'
+    args: ['cp', '${_BAZEL_BIN}/${_SCRIPT_NAME}', asmcli/]
   - name: 'gcr.io/cloud-builders/docker'
     dir: 'asmcli'
     id: 'build-tester-image'
@@ -205,4 +210,5 @@ substitutions:
   _SERVICE_ACCOUNT: asm-installer
   _SECRET_NAME: asm-installer-creds
   _KEY_FILE: key.json
+  _BAZEL_BIN: bazel-bin
 timeout: 3600s  # 1 hour
