--- a/asm/istio/options/ingress-neg-backendconfig.yaml
+++ b/asm/istio/options/ingress-neg-backendconfig.yaml
@@ -24,5 +24,5 @@ spec:
           service:
             type: ClusterIP
           serviceAnnotations:
-            cloud.google.com/backend-config: '{"default": "ingress-backendconfig"}' # {"$ref":"#/definitions/io.k8s.cli.substitutions.ingress-backend-config"}
+            cloud.google.com/backend-config: '{"default": "BACKEND_CONFIG_NAME"}' # {"$ref":"#/definitions/io.k8s.cli.substitutions.ingress-backend-config"}
             cloud.google.com/neg: '{"ingress": true}'
