--- a/asmcli/cloudbuild-flaky.yaml
+++ b/asmcli/cloudbuild-flaky.yaml
@@ -38,7 +38,7 @@ substitutions:
   _IMAGE_NAME: gcloud-with-kpt
   _SCRIPT_NAME: asmcli
   _ASM_VM_SCRIPT_NAME: asm_vm
-  _ASM_PKG_BRANCH: ""
+  _ASM_PKG_BRANCH: $COMMIT_SHA
   _SERVICE_ACCOUNT: asm-installer
   _SECRET_NAME: asm-installer-creds
   _KEY_FILE: key.json
