Support new configuration in service proxy agent

--- a/scripts/asm-installer/Dockerfile
+++ b/scripts/asm-installer/Dockerfile
@@ -7,7 +7,7 @@ ENV SERVICE_ACCOUNT my_sa_email_goes_here
 # cloudbuild will override this variable:
 ENV KEY_FILE path_to_a_key_file_goes_here
 # install script dependencies
-RUN apt-get install google-cloud-sdk-kpt jq kubectl -y
+RUN apt-get install google-cloud-sdk-kpt jq kubectl ruby-full -y
 # install test dependencies
 RUN apt-get install shellcheck posh bc procps openssl yamllint -y
 # copy source files into WORKDIR
