--- a/asm/istio/options/ca-migration-meshca.yaml
+++ b/asm/istio/options/ca-migration-meshca.yaml
@@ -25,3 +25,5 @@ spec:
     defaultConfig:
       proxyMetadata:
         PROXY_CONFIG_XDS_AGENT: "true"
+    trustDomainAliases: # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.trustDomainAliases"}
+      - "cluster.local"
