Update citadel and off-gcp overlays for multicloud support (#761)

--- a/asm/istio/options/citadel-ca.yaml
+++ b/asm/istio/options/citadel-ca.yaml
@@ -28,13 +28,13 @@ spec:
     trustDomain: "cluster.local"
     defaultConfig:
       proxyMetadata:
-        GKE_CLUSTER_URL: "" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
-        GCP_METADATA: "" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-metadata"}
         CA_PROVIDER: "Citadel"
         PLUGINS: ""
         USE_TOKEN_FOR_CSR: "false"
-        GCE_METADATA_HOST: ""
   values:
     global:
       caAddress: ""
       pilotCertProvider: "istiod"
+      sds:
+        token:
+          aud: "istio-ca"
