update the linter to run through each file

--- a/asmcli/cloudbuild-main.yaml
+++ b/asmcli/cloudbuild-main.yaml
@@ -58,14 +58,9 @@ steps:
       - '../asm'
   
   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-    dir: 'asmcli'
     id: 'lint-variables'
-    entrypoint: '/bin/bash'
-    args:
-      - '-c'
-      - >
-        ./tests/lint_variables
-        ${_SCRIPT_NAME}
+    entrypoint: '/usr/bin/bazel'
+    args: ['test', 'lint_variables', '--test_output=all']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     dir: 'asmcli'
