--- a/asm/istio/options/hub-meshca.yaml
+++ b/asm/istio/options/hub-meshca.yaml
@@ -23,26 +23,26 @@ spec:
           - name: GKE_CLUSTER_URL
             value: "HUB_IDP_URL" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hub-idp-url"}
           - name: SPIFFE_BUNDLE_ENDPOINTS
-            value: "ENVIRON_PROJECT_ID.svc.id.goog|https://storage.googleapis.com/mesh-ca-resources/spiffe_bundle.json" # {"$ref":"#/definitions/io.k8s.cli.substitutions.spiffe-bundle-endpoints-hub"}
+            value: "HUB_TRUST_DOMAIN|https://storage.googleapis.com/mesh-ca-resources/spiffe_bundle.json" # {"$ref":"#/definitions/io.k8s.cli.substitutions.spiffe-bundle-endpoints-hub"}
           - name: ENABLE_STACKDRIVER_MONITORING
             value: "true" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
           - name: GCP_METADATA
             value: "PROJECT_ID|PROJECT_NUMBER|asm-cluster|us-central1-c" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-hub-metadata"}
           - name: TOKEN_AUDIENCES
-            value: "istio-ca,ENVIRON_PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences-hub"}
-          - name: PILOT_ENABLE_WORKLOAD_ENTRY_AUTOREGISTRATION
+            value: "istio-ca,HUB_TRUST_DOMAIN" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences-hub"}
+          - name: PILOT_ENABLE_CROSS_CLUSTER_WORKLOAD_ENTRY
             value: "true"
   meshConfig:
-    trustDomain: "ENVIRON_PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain-hub"}
+    trustDomain: "HUB_TRUST_DOMAIN" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hubTrustDomain"}
     defaultConfig:
       proxyMetadata:
         GCP_METADATA: "PROJECT_ID|PROJECT_NUMBER|asm-cluster|us-central1-c" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-hub-metadata"}
         GKE_CLUSTER_URL: "HUB_IDP_URL" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hub-idp-url"}
     trustDomainAliases: # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.trustDomainAliases"}
-      - "ENVIRON_PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain-hub"}
+      - "HUB_TRUST_DOMAIN" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hubTrustDomain"}
   values:
     global:
       # Enable SDS
       sds:
         token:
-          aud: "ENVIRON_PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain-hub"}
+          aud: "HUB_TRUST_DOMAIN" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hubTrustDomain"}
